# HM-search

./: .gitignore  README.md  requirements.txt
api/: main.py  makefile  pyproject.toml  requirements.txt
api/routers/: models.py  search.py
frontend/: README.md  package-lock.json  package.json
frontend/api/: main.py
frontend/api/routers/: literals.py  models.py  search.py
frontend/public/static/fashion-clip/: README.md
frontend/src/app/: api.js  categories.json  page.js  worker.js
frontend/src/app/components/: Header.jsx  ImageGrid.jsx  LoadIcon.css  LoadIcon.jsx  Modal.jsx  SearchBar.jsx  Sidebar.jsx
preprocess/: 1_create_metadata.ipynb  2_create_embeddings.ipynb  3_create_index.ipynb  README.md  requirements.txt
preprocess/0_scrape_hm/: 0_scrape_hm.ipynb  scrape.py
preprocess/4_quantization/: README.md
preprocess/h&m_webscraping/: datamining2.ipynb
