[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.7.4",
    "fastapi==0.109.2",
    "fastapi-utils==0.2.1",
    "gdown==5.1.0",
    "numpy==1.26.4",
    "pandas==2.2.0",
    "uvicorn==0.27.0.post1",
]
